--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --fedex-purple: #4D148C;
+  --fedex-orange: #FF6600;
+  --fedex-blue: #002D72;
 }
 
 @theme inline {
@@ -12,15 +15,37 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
+   font-family: var(--font-inter);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .bg-fedex-purple {
+    background-color: #4D148C;
+  }
+  .text-fedex-purple {
+    color: #4D148C;
+  }
+  .bg-fedex-orange {
+    background-color: #FF6600;
+  }
+  .text-fedex-orange {
+    color: #FF6600;
+  }
+  .bg-fedex-blue {
+    background-color: #002D72;
+  }
+  .text-fedex-blue {
+    color: #002D72;
+  }
 }
